--- a/home.html
+++ b/home.html
@@ -15,8 +15,8 @@
 </head>
 ss
 <body class='body'>
-<nav class="navbar navbar-expand-lg navbar-light" style="background:white;">
-  <a class="navbar-brand" href="#"><b>Care Club</b></a>
+<nav class="navbar navbar-expand-lg" >
+  <a class="navbar-brand text-dark" href="#" style="color: blue;"><b>Care Club</b></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -24,7 +24,7 @@ ss
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item itemactive">
-        <a class="nav-link" href="#"><b>Home</b> <span class="sr-only">(current)</span></a>
+        <a class="nav-link text-dark" href="#"><b>Home</b> <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#"><b>Trending</b></a>
